--- a/src/page/HomePage/RSlick/MultipleRows.module.css
+++ b/src/page/HomePage/RSlick/MultipleRows.module.css
@@ -42,7 +42,8 @@
 .movie-image {
     width: 100%;
     height: 300px;
-    object-fit: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
     border-radius: 8px;
 }
 
@@ -82,6 +83,11 @@
 .carousel-item:hover .btn-buy-ticket {
     opacity: 1;
     visibility: visible;
+
+}
+
+.carousel-item:hover {
+    cursor: pointer;
 }
 
 .movie-description {
@@ -111,4 +117,5 @@
 .carousel-item:hover .movie-description {
     opacity: 0;
     visibility: hidden;
+
 }
